# Andrometa

./: .gitignore  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
backend/account/: admin.py  authentication.py  backends.py  middleware.py  models.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py  0002_remove_authotp_is_used.py  0002_rename_first_name_bonduser_full_name_and_more.py  0003_country_bonduser_country_state_country.py  0003_plan_usersubscription.py  0004_bonduser_is_app_user.py
backend/account/models/: __init__.py  country_state_city.py  custom_user.py  main_menu.py  plan.py  subscription.py
backend/account/serializers/: __init__.py  custom_user.py
backend/account/urls/: __init__.py  custom_user.py  main_menu.py
backend/account/views/: __init__.py  custom_user.py  main_menu.py
backend/backend/: settings.py  urls.py
backend/core/: admin.py
backend/core/migrations/: 0001_initial.py  0002_alter_file_user_alter_folder_parent_and_more.py  0002_googledriveaccount_app_used_storage_and_more.py  0003_googledriveaccount_created_by_and_more.py  0004_rename_last_sync_attempt_file_deleted_at_and_more.py
backend/core/models/: __init__.py  file.py  folder.py  google_drive.py  one_drive.py  sync_data.py
backend/core/serializers/: __init__.py  file.py  folder.py  (+1 more)
backend/manager/: base_model.py  base_serializer.py  base_view.py  manager.py  models.py  urls.py
backend/postoffice/: models.py  views.py
backend/qradmin/: models.py  urls.py  views.py
(+31 files in other folders)
